--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "circular-json": "^0.5.9",
     "cors": "2.8.5",
     "express": "4.17.1",
     "http": "0.0.1-security",
-    "socket.io": "2.3.0"
+    "socket.io": "2.0.0"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
