--- a/web/package.json
+++ b/web/package.json
@@ -35,7 +35,8 @@
     "socket.io-client": "2.3.0",
     "styled-components": "5.2.0",
     "typescript": "~3.7.2",
-    "uuid": "8.3.1"
+    "uuid": "8.3.1",
+    "webrtc-adapter": "^8.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
